stop sidebar from causing page jumps and make it load first

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7348,3 +7348,8 @@ button, .btn {
 	height: 100%;
 	width: auto;
 }
+
+.order-first {
+	-ms-flex-order: -1;
+	order: -1;
+}
